vlib/v/checker/tests/fn_args.vv
fn uu8(a u8) {}

fn arr(a []int) {}

fn fun(a fn (int)) {}

fn basic() {
	v := 4
	uu8(&v)
	arr([5]!)
	fun(fn (i &int) {})
	fun(fn (ii ...int) {})
}

struct S1 {
}

fn f(p &S1) {}

fn ptr() {
	v := 4
	f(v)
}
